# ceiling

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.es-MX.md  README.ja-JP.md  README.ko-KR.md  README.md  README.zh-CN.md  SECURITY.md  VERSIONING.md  version.env  worker.mjs  worker.test.mjs  wrangler.jsonc
apps/desktop-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop-tauri/src-tauri/capabilities/: default.json  floatbar.json  flyout.json  main.json
apps/desktop-tauri/src-tauri/permissions/: commands.toml
apps/desktop-tauri/src-tauri/src/: auto_refresh.rs  capacity_events.rs  enforcement.rs  events.rs  geometry_store.rs  main.rs  powertoys.rs  proof_harness.rs  shortcut_bridge.rs  state.rs  surface.rs  taskbar_widget.rs  tray_bridge.rs  tray_menu.rs  usage_history.rs
rust/: CHANGELOG.md  Cargo.toml
rust/installer/: codexbar.iss
rust/scripts/: build-installer.sh
rust/src/: agent_sessions.rs  codex_costs.rs  cost_scanner.rs  cursor_activity.rs  grok_costs.rs  lib.rs  locale.rs  main.rs  notifications.rs  secure_file.rs  settings.rs  updater.rs  windows_security.rs  wsl.rs
rust/src/agent_sessions/: parsers.rs  tests.rs
rust/src/browser/: cookies.rs  mod.rs
rust/src/cli/: autostart.rs  cost.rs  diagnose.rs  mcp.rs  mod.rs  serve.rs  statusline.rs  usage.rs
rust/src/core/: account_dirs.rs  account_ledger.rs  claude_accounts.rs  codex_accounts.rs  configured_accounts.rs  cost_pricing.rs  cost_pricing_tests.rs  http.rs  jsonl_scanner.rs  mod.rs  provider.rs  token_accounts.rs  usage_snapshot.rs
rust/src/host/: session.rs
rust/src/locale/: chinese.rs  en-US.ftl  english.rs  es-MX.ftl  ja-JP.ftl  japanese.rs  keys.rs  ko-KR.ftl  spanish.rs  tests.rs  zh-CN.ftl  zh-TW.ftl
rust/src/providers/: alibabatokenplan.rs  azureopenai.rs  t3chat.rs
rust/src/providers/abacus/: mod.rs
rust/src/providers/alibaba/: mod.rs
rust/src/providers/amp/: mod.rs
rust/src/providers/antigravity/: mod.rs
rust/src/providers/augment/: keepalive.rs  mod.rs
rust/src/providers/bedrock/: mod.rs
rust/src/providers/claude/: admin_api.rs  cli_reset.rs  mod.rs  oauth.rs  scoped_weekly.rs  web_api.rs
rust/src/providers/codebuff/: mod.rs
rust/src/providers/codex/: api.rs  mod.rs
rust/src/providers/commandcode/: mod.rs
rust/src/providers/copilot/: api.rs
rust/src/providers/crof/: mod.rs
rust/src/providers/cursor/: api.rs  mod.rs  session.rs
rust/src/providers/deepgram/: mod.rs
rust/src/providers/deepseek/: mod.rs
rust/src/providers/doubao/: mod.rs
rust/src/providers/elevenlabs/: mod.rs
rust/src/providers/factory/: mod.rs
rust/src/providers/gemini/: api.rs  mod.rs
rust/src/providers/grok/: mod.rs
rust/src/providers/groq/: mod.rs
rust/src/providers/kilo/: mod.rs
rust/src/providers/kimi/: mod.rs
rust/src/providers/kimik2/: mod.rs
rust/src/providers/llmproxy/: mod.rs
rust/src/providers/manus/: mod.rs
rust/src/providers/mimo/: mod.rs
rust/src/providers/minimax/: mod.rs
rust/src/providers/mistral/: mod.rs
rust/src/providers/nanogpt/: mod.rs
rust/src/providers/ollama/: mod.rs
rust/src/providers/openaiapi/: mod.rs
rust/src/providers/opencode/: mod.rs  scraper.rs
rust/src/providers/opencodego/: mod.rs
rust/src/providers/openrouter/: mod.rs
rust/src/providers/perplexity/: mod.rs
rust/src/providers/stepfun/: mod.rs
rust/src/providers/synthetic/: mod.rs
rust/src/providers/venice/: mod.rs
rust/src/providers/vertexai/: mod.rs  token_refresher.rs
rust/src/providers/warp/: mod.rs
rust/src/providers/zai/: mod.rs
rust/src/settings/: api_keys.rs  manual_cookies.rs  provider_workspace.rs  raw.rs  tests.rs  types.rs
rust/src/status/: mod.rs
rust/src/tray/: mod.rs  render.rs
(+184 files in other folders)
