[package]
name = "codexbar-desktop-tauri"
version = "1.5.3"
edition = "2024"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
codexbar = { path = "../../../rust" }
chrono = { version = "0.4", features = ["serde"] }
raw-window-handle = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tokio = { version = "1", features = ["rt", "time", "sync", "net", "io-util"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Accessibility",
] }

[dev-dependencies]
# Deterministic DST-transition tests for local-day window boundaries.
chrono-tz = "0.10"
# Real directories for the config-directory account command tests.
tempfile = "3"
